hero spacing fix on homepage

--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -1,7 +1,7 @@
 @import "./variables.scss";
 
 h1 {
-  padding-top: 15%;
+  padding-top: 18%;
   font-weight: bold;
   font-family: $headingsfont;
   font-size: 8em;
